tests/test_files/initialization_inference/move_twice.stderr
error: access to uninitialized path
- initialization_inference/move_twice:8:7
8 |   take(x)
  |        ^
