tests/test_files/initialization_inference/move_twice.lark
//~ execute:no

struct Bar { x: uint }

def main() {
  let x = Bar(x: 22)
  take(x)
  take(x)
  //~ ERROR: access to uninitialized path
}

def take(v: Bar) { }
